# nuketorch

./: .gitignore  CMakeLists.txt  README.md
cmake/: FetchLibtorch.cmake  FindTensorRT.cmake  nuketorchConfig.cmake.in
docs/: writing-a-plugin.md
include/nuketorch/: IPC.h  ImageUtils.h  InferenceClient.h  InferenceMetrics.h  Protocol.h  ScopedTimer.h  SharedMemoryBuffer.h  WorkerHarness.h
include/nuketorch/torch_worker/: AOTInductorBackend.h  BackendCache.h  BackendParams.h  CudaEventTimer.h  CudaPinnedMemory.h  InferenceBackend.h  TensorRTBackend.h  TorchScriptBackend.h  TorchWorkerUtils.h
src/: IPC.cpp  ImageUtils.cpp  InferenceClient.cpp  InferenceMetrics.cpp  Protocol.cpp  SharedMemoryBuffer.cpp  WorkerHarness.cpp
src/torch_worker/: AOTInductorBackend.cpp  BackendCache.cpp  BackendParams.cpp  CudaEventTimer.cpp  CudaPinnedMemory.cpp  InferenceBackend.cpp  TensorRTBackend.cpp  TorchScriptBackend.cpp  TorchWorkerUtils.cpp
tests/: CMakeLists.txt  FakeWorker.cpp  HarnessSmokeWorker.cpp  IPCTest.cpp  ImageUtilsTest.cpp  InferenceClientTest.cpp  InferenceMetricsTest.cpp  ProtocolTest.cpp  ScopedTimerTest.cpp  SharedMemoryBufferTest.cpp  TestPaths.h.in  TorchWorkerUtilsTest.cpp  WorkerHarnessTest.cpp
tests/fixtures/: gen_tiny_torchscript.py  gen_tiny_trt_engine.py  tiny_add.pt
